# open-transit-ng

./: README.md  pyproject.toml
docs/: design_rationale.md
open_transit_py/: pyproject.toml
open_transit_py/open_transit_py/: database.py  util.py
opentransit/: app.py
opentransit/data/: fake_repository.py  repository.py
opentransit/graphql/: context.py  schema.py
opentransit/model/: misc.py  transit.py
opentransit/models/: id.py
tests/: test_id_model.py
